--- a/public/crm.html
+++ b/public/crm.html
@@ -772,10 +772,12 @@
 
                 <div class="upload-area">
                     <h3 style="font-size: 1rem; margin-bottom: 15px; color: #4a5568;">Adicionar Novo Arquivo</h3>
-                    <form id="upload-form" class="flex-row gap-10">
-                        <input type="file" id="attachment-file" class="form-input" style="padding: 8px;" required>
-                        <button id="btnSearch" class="btn-primary w-full flex items-center justify-center gap-2">
-                            <i class="fas fa-search"></i> Iniciar Busca Web
+                    <form id="upload-form" class="flex-row gap-10"
+                        style="display: flex; gap: 10px; align-items: center;">
+                        <input type="file" id="attachment-file" class="form-input" style="padding: 8px;" required
+                            multiple>
+                        <button type="submit" class="btn btn-primary" style="white-space: nowrap;">
+                            <i class="fas fa-upload"></i> Enviar
                         </button>
                     </form>
                     <div id="upload-progress" class="hidden"
